<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/greyplus">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b1"
            android:layout_margin="10dp"
            android:text="@string/text_upg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/b2"
            android:layout_margin="10dp"
            android:text="@string/text_achiv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="576dp"
        android:background="@color/grey"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/clicks_on_balance"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/textmini"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:gravity="center"
            android:text=""
            android:textSize="@dimen/default_text_size" />

        <ImageButton
            android:id="@+id/kitka"
            android:layout_width="460px"
            android:layout_height="536px"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="200dp"
            android:layout_marginRight="120dp"
            android:layout_marginBottom="200dp"
            android:src="@drawable/kitty">

        </ImageButton>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bot"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/bot1"
            android:text="@string/textVkLink"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/bot2"
            android:text="@string/textLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/bot3"
            android:text="@string/textNumber"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>